	* Improve performance of Fog of War
	* Units can now be instructed to find the next repair yard on their own
	* Save game speed, scroll speed and sound volume as game settings
	* New game option "Manual Carryall Drops"
	* Save screenshots as PNG
	* 64-bit builds for Windows
	* Store complete map in save games (and replays) of single player custom games
	* Bugfix (Bug #40):  Bullets from gun turrets hit own building, e.g. other turrets (Thanks to Dream Worker for reporting that bug)
	* Bugfix (Bug 3610246): Mentat help used wrong houses (Thanks to kuffar for reporting that bug)

version 0.96.3
	* Full-featured map editor with support of Dune2-compatible maps as well as the extended map format
	* Integration of OpenSuperDune (a replacement to the original SuperDune)
	* Unit/Structure stats and the techtree is read from a config file
	* Used scaler (Nearest Neighbor or Scale2x) is configurable (default = Scale2x)
	* Game completely localizable (except helping menu)
	* Harvesters now have a return command
	* Trying to place a structure on a tile which is already occupied by (your own) units orders them to move away
	* Add support for multiple different AI implementations
	* Improved AI: Base is now built up faster and more compact
	* New single and multiplayer maps
	* Determine username automatically upon first start up
	* Pressing an assigned number twice centers the screen on the selected units
	* Destroyed units might spawn a soldier (Probability depends on the type of unit)
	* Quad, Trike and Infantry units have a bumpy moving style when moving over rocks, mountains and thick spice
	* Idling units randomly turn around
	* Bullets now have an explosion animation when hitting
	* Spice blooms have now their own animation
	* Full Harvesters move 40% slower than empty ones
	* Units are defined badly damaged (smoke, only one weapon) if < 50% max. health (instead of 30%)
	* Sardaukar Troopers and Fremen Troopers are no unit types on its own anymore (just normal Troopers)